<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/signupFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey_bg"
    tools:context=".fragments.SignupFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/signupSubmit"
        android:background="@drawable/white_linear_layout"
        android:layout_marginBottom="10dp"
        android:elevation="10dp">

        <LinearLayout
            android:id="@+id/details_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"


            android:orientation="vertical"
            android:padding="10dp"
            android:paddingStart="30dp"
            android:paddingEnd="30dp">

            <TextView
                android:id="@+id/LoginHead"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/signup_head_text"
                android:textColor="@color/red_theme"
                android:textSize="30sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/name_head"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:text="@string/name_text"
                    android:textColor="@color/black_font"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/name_textLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/name_hint_text"
                    android:textColorHint="@color/grey_bg"
                    app:endIconDrawable="@drawable/person_icon"
                    app:endIconMode="custom"
                    app:endIconTint="@color/red_theme"
                    app:errorEnabled="true">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/create_name_textEdit"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:backgroundTint="@color/white" />

                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/email_head"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:text="@string/email_text"
                    android:textColor="@color/black_font"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/email_textLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/email_hint_text"
                    android:textColorHint="@color/grey_bg"
                    app:endIconDrawable="@drawable/email_icon"
                    app:endIconMode="custom"
                    app:endIconTint="@color/red_theme"
                    app:errorEnabled="true">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/create_email_textEdit"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:backgroundTint="@color/white" />

                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/contact_head"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:text="@string/contact_text"
                    android:textColor="@color/black_font"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <com.hbb20.CountryCodePicker
                        android:layout_width="wrap_content"
                        android:layout_height="45dp" />

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/contact_textLayout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/contact_hint_text"
                        android:textColorHint="@color/grey_bg"
                        app:endIconDrawable="@drawable/call_icon"
                        app:endIconMode="custom"
                        app:endIconTint="@color/red_theme"
                        app:errorEnabled="true">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/contact_textEdit"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:backgroundTint="@color/white" />
                    </com.google.android.material.textfield.TextInputLayout>


                </LinearLayout>


            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/password_head"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:text="@string/password_text"
                    android:textColor="@color/black_font"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/password_textLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password_hint_text"
                    android:textColorHint="@color/grey_bg"
                    app:endIconDrawable="@drawable/lock_icon"
                    app:endIconMode="custom"
                    app:endIconTint="@color/red_theme"
                    app:errorEnabled="true">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/create_password_textEdit"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:backgroundTint="@color/white" />
                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <CheckBox
                    android:id="@+id/term_condition_checkbox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:buttonTint="@color/red_theme" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="2dp"
                    android:text="@string/terms_condition_text"
                    android:textColor="@color/grey_font"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/terms_conditions_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="2dp"
                    android:text="@string/t_d_text"
                    android:textColor="@color/red_theme"
                    android:textStyle="bold" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="2dp"
                    android:text="@string/account_already_text"
                    android:textColor="@color/grey_font"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/signupPage_signin_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="2dp"
                    android:text="@string/signin_text"
                    android:textColor="@color/red_theme"
                    android:textStyle="bold" />

            </LinearLayout>

        </LinearLayout>
    </ScrollView>


    <TextView
        android:id="@+id/signupSubmit"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:background="@drawable/login_red_layout"
        android:padding="10dp"
        android:text="@string/Register_text"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="@color/white"
        android:textSize="18sp" />
</RelativeLayout>
