<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/loginFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey_bg"
    tools:context=".fragments.LoginFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/loginSubmit"
        android:background="@drawable/white_linear_layout"
        android:layout_marginBottom="10dp"
        android:elevation="10dp">

        <LinearLayout
            android:id="@+id/details_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp"
            android:paddingStart="30dp"
            android:paddingEnd="30dp">

            <TextView
                android:id="@+id/LoginHead"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/login_head_text"
                android:textColor="@color/red_theme"
                android:textSize="30sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/email_head"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:text="@string/email_text"
                    android:textColor="@color/black_font"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/email_textLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/email_hint_text"
                    android:textColorHint="@color/grey_bg"
                    app:endIconDrawable="@drawable/email_icon"
                    app:endIconMode="custom"
                    app:endIconTint="@color/red_theme"
                    app:errorEnabled="true">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/email_textEdit"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:backgroundTint="@color/white" />

                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/password_head"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:text="@string/password_text"
                    android:textColor="@color/black_font"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/password_textLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password_text"
                    android:textColorHint="@color/grey_bg"
                    app:endIconDrawable="@drawable/lock_icon"
                    app:endIconMode="custom"
                    app:endIconTint="@color/red_theme"
                    app:errorEnabled="true">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/password_textEdit"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:backgroundTint="@color/white" />
                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>

            <TextView
                android:id="@+id/forgotPwd_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:focusable="true"
                android:text="@string/forgot_password_text"
                android:textAlignment="viewEnd"
                android:textColor="@color/red_theme"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/login_with_text"
                android:textAlignment="center"
                android:textColor="@color/black_font"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:weightSum="2"
                android:padding="10dp">

                <ImageButton
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:src="@drawable/google_icon"
                    android:layout_weight="1"
                    android:layout_marginEnd="20dp"
                    android:layout_marginStart="20dp"
                    android:backgroundTint="@color/white"/>

                <ImageButton
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:src="@drawable/facebook_icon"
                    android:layout_weight="1"
                    android:layout_marginEnd="20dp"
                    android:layout_marginStart="20dp"
                    android:backgroundTint="@color/white"/>



            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="2dp"
                    android:textStyle="bold"
                    android:textColor="@color/grey_font"
                    android:text="@string/register_now_text"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="2dp"
                    android:textStyle="bold"
                    android:textColor="@color/red_theme"
                    android:id="@+id/registernow_text"
                    android:text="@string/Register_now"/>

            </LinearLayout>


        </LinearLayout>
    </ScrollView>


    <TextView
        android:id="@+id/loginSubmit"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:background="@drawable/login_red_layout"
        android:padding="10dp"
        android:text="@string/login_text"
        android:textAlignment="center"
        android:clickable="true"
        android:focusable="true"
        android:textAllCaps="true"
        android:textColor="@color/white"
        android:textSize="18sp" />
</RelativeLayout>
